--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,16 @@
       name="SHOP - BUY STUFF"
       content="A place to pretend to buy pretend stuff from a pretend shop. Pretend."
     />
-
+    <!-- ROBOTO FONT FOR MATERIAL-UI-->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <!-- MATERIAL-UI ICONS-->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <!-- Font awesome CDN -->
     <link
       rel="stylesheet"
